# code-review-agent

./: .env.example  .gitignore  README.md  docker-compose.yml
agent-worker/: .env.example  README.md  pyproject.toml
agent-worker/app/: __init__.py  config.py  main.py  retry.py  schemas.py
agent-worker/app/clients/: __init__.py  backend_api.py  model_client.py
agent-worker/app/graph/: builder.py  initial_nodes.py  runner.py  state.py
agent-worker/app/graph/nodes/: __init__.py  common.py  context.py  patch.py  planning.py
agent-worker/tests/: test_backend_api_client.py  test_initial_graph_builder.py  test_patch_model_node.py  test_planning_model_node.py  test_worker_graph_runner.py  test_worker_model_client.py
backend/: README.md  pom.xml
docs/: README.md  development-plan.md
docs/assets/: README.md
docs/management/: README.md  acceptance-checklist.md  implementation-log.md  real-token-demo-runbook.md  roadmap.md
docs/requirements/: README.md  (+3 more)
examples/: README.md
frontend/: README.md  index.html  package-lock.json  package.json
mcp-tool-server/: README.md
scripts/: README.md  agent-worker-business-smoke.mjs  agent-worker-business-smoke.sh  agent-worker-callback-smoke.sh  agent-worker-coder-model-smoke.sh  agent-worker-coder-smoke.sh  agent-worker-node-smoke.sh  agent-worker-planner-smoke.sh  agent-worker-smoke.sh  agent-worker-tool-smoke.sh  browser-smoke.mjs  browser-smoke.sh  real-coder-demo.mjs  real-coder-demo.sh  real-github-pr-demo.mjs  real-github-pr-demo.sh  real-token-demo-check.sh  remote-github-pr-smoke.mjs  remote-github-pr-smoke.sh
(+242 files in other folders)
