[project]
name = "repopilot-agent-worker"
version = "0.1.0"
description = "LangGraph worker for RepoPilot agent runs"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langgraph>=0.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0"
]

[tool.ruff]
line-length = 100
target-version = "py39"
